test/data/golden/pass/println_ok.sv0
fn main() -> i32 {
  println("golden");
  return 0;
}
