test/data/golden/fail/old_in_body.sv0
fn f(x: i32) -> i32 {
  return old(x);
}
